samples/_failures_safe/1761437091_d50fac_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_515335bb.c: In function ‘tokenize’:
./samples/SAFE/__tmp_515335bb.c:172:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  172 |     Token eof_token
      |     ^~~~~
./samples/SAFE/__tmp_515335bb.c:172:5: error: expected declaration or statement at end of input
